--- a/HMineral/Base.lproj/Main.storyboard
+++ b/HMineral/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="DHt-UV-KO0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="DHt-UV-KO0">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -17,7 +17,21 @@
                     <view key="view" contentMode="scaleToFill" id="A5u-7c-Ut0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ÇOK YAKINDA..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l1h-p6-4yO">
+                                <rect key="frame" x="86" y="232" width="429" height="135"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="l1h-p6-4yO" firstAttribute="centerY" secondItem="A5u-7c-Ut0" secondAttribute="centerY" id="Ifn-q1-GSp"/>
+                            <constraint firstItem="l1h-p6-4yO" firstAttribute="centerX" secondItem="A5u-7c-Ut0" secondAttribute="centerX" id="XRi-I2-iP1"/>
+                            <constraint firstItem="l1h-p6-4yO" firstAttribute="leading" secondItem="A5u-7c-Ut0" secondAttribute="leadingMargin" constant="66" id="uSP-Jd-Zse"/>
+                            <constraint firstItem="l1h-p6-4yO" firstAttribute="top" secondItem="0hK-Cf-W4I" secondAttribute="bottom" constant="168" id="wpj-bp-RIU"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cj5-1o-30i"/>
                 </viewController>
@@ -285,33 +299,47 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gg0-uX-ViH">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Araştırma ekibinin geniş çerçevedeki uzmanlık alanları HMT’ye cevher hazırlamanın çeşitli alanlarında çalışma imkanı tanımaktadır. Bu nedenle, HMT, herhangi bir cevher hazırlama projesini cevher karakterizasyon aşamasından konsantre üretimine kadar tamamlayabilecek beceriye sahiptir. Bu çeşitlilik üretkenlik ve mükemmelliyet olgusunu geliştirmektedir. HMT’nin AR-GE kapsamındaki araştırma alanları aşağıda verilmektedir; 
+                                <mutableString key="text">Araştırma ekibinin geniş çerçevedeki uzmanlık alanları HMT’ye cevher hazırlamanın çeşitli alanlarında çalışma imkanı tanımaktadır. Bu nedenle, HMT, herhangi bir cevher hazırlama projesini cevher karakterizasyon aşamasından konsantre üretimine kadar tamamlayabilecek beceriye sahiptir. Bu çeşitlilik üretkenlik ve mükemmelliyet olgusunu geliştirmektedir. HMT’nin AR-GE kapsamındaki araştırma alanları aşağıda verilmektedir; 
 
 - Modelleme ve simülasyonla performans değerlendirme ve optimizasyon
+
 - Enerji tasarruflu öğütme teknolojileri
+
 - HPGR Merdaneli değirmenİnce öğütme (Isamill, karıştırmalı değirmen)
+
 - Cevher karakterizasyonu için jeometallurjik bir aracın geliştirilmesi
+
 - Oksidasyon indeksi
+
 - Su kimyasının flotasyon performansı üzerinde etkilerinin modellenmesi
+
 - Kuru proses tekniklerinin geliştirilmesi
+
 - Cevher ayıklama sistemleri
+
 - Elektrostatik ayırma
+
 - Temiz kömür teknolojileri
+
 - Sensör bazlı kontrol sistemleri (optik ayırma)
+
 - Yapay görme sistemleri
+
 - Mineral problarının ve elektrokimyasal sistemlerin palp kimyasının online izlenmesi amacıyla kullanılması
+
 - Cevher hazırlama için yazılımların geliştirilmesi
-- Lave kömür yıkama devresi tasarımı programı</string>
+
+- Lave kömür yıkama devresi tasarımı programı</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="gg0-uX-ViH" firstAttribute="top" secondItem="gOV-ke-qwZ" secondAttribute="bottom" id="HuV-Jf-gyU"/>
-                            <constraint firstItem="gg0-uX-ViH" firstAttribute="leading" secondItem="jmA-bH-WnX" secondAttribute="leading" id="V5A-ng-cd0"/>
-                            <constraint firstAttribute="trailing" secondItem="gg0-uX-ViH" secondAttribute="trailing" id="fak-Bb-pZS"/>
-                            <constraint firstItem="gg0-uX-ViH" firstAttribute="bottom" secondItem="XYc-Jd-7ss" secondAttribute="top" id="wWg-JU-Xps"/>
+                            <constraint firstItem="gg0-uX-ViH" firstAttribute="bottom" secondItem="XYc-Jd-7ss" secondAttribute="top" id="Xcg-0W-W61"/>
+                            <constraint firstAttribute="trailing" secondItem="gg0-uX-ViH" secondAttribute="trailing" id="fjK-Bt-uYn"/>
+                            <constraint firstItem="gg0-uX-ViH" firstAttribute="leading" secondItem="jmA-bH-WnX" secondAttribute="leading" id="mzo-tk-ggR"/>
+                            <constraint firstItem="gg0-uX-ViH" firstAttribute="top" secondItem="gOV-ke-qwZ" secondAttribute="bottom" id="wFm-Sl-tOm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="6iI-L9-BWi"/>
@@ -338,14 +366,20 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="z9f-I4-kA1">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">HMT cevher zenginleştirme tesis tasarımında simülasyon araçlarından yoğun olarak yararlanmaktadır. Buna yönelik modelleme çalışmalarınıda yapabilmektedir. Genel olarak yaygın şekilde kullanılan simülasyon paketleri aşağıda sunulmaktadır: 
+                                <mutableString key="text">
+HMT cevher zenginleştirme tesis tasarımında simülasyon araçlarından yoğun olarak yararlanmaktadır. Buna yönelik modelleme çalışmalarınıda yapabilmektedir. Genel olarak yaygın şekilde kullanılan simülasyon paketleri aşağıda sunulmaktadır: 
 
 - JKSimMet
+
 - JKSimFloat
+
 - HSC Chemistry
+
 - Lave (Kömür Hazırlama, HMT yazılımı)
+
 - Kırma ve eleme ile ilgili mevcut tüm simülasyon programları
-- Cevher hazırlama devresi çizim programı (HMT yazılımı)</string>
+
+- Cevher hazırlama devresi çizim programı (HMT yazılımı)</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -359,6 +393,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xQy-3d-FIc"/>
+                    <connections>
+                        <outlet property="yazilimTV" destination="z9f-I4-kA1" id="L5Y-9B-G8W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d8d-6l-Ais" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -379,11 +416,13 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="w8L-fh-Z1K">
                                 <rect key="frame" x="0.0" y="72" width="600" height="315"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Hacettepe Mineral Teknolojileri Hacettepe Üniversitesi Teknoloji Geliştirme Merkezi’nde Konusunda uzman bir grup Öğretim Üyesi tarafından kurulmuş bir şirkettir.
-HMT doğadan çıkartılan madenlerin zenginleştirilmesi amacıyla gerekli olan tüm laboratuvar çalışmaları, modelleme ve simülasyonla devre tasarımı, akım şeması geliştirme ve ekipman seçimi/boyutlandırması işlerini kapsayan Ar-Ge faaliyetleri konusunda hizmet vermektedir.
-Endüstriye verilen bu Ar-Ge destekleri yanında ekipman tasarımı ve cevher hazırlama devrelerinin modelleme/simülasyonu konularında Ar-Ge çalışmaları yürütmektedir.
+                                <mutableString key="text">
+Hacettepe Mineral Teknolojileri Hacettepe Üniversitesi Teknoloji Geliştirme Merkezi’nde Konusunda uzman bir grup Öğretim Üyesi tarafından kurulmuş bir şirkettir.
+
+HMT doğadan çıkartılan madenlerin zenginleştirilmesi amacıyla gerekli olan tüm laboratuvar çalışmaları, modelleme ve simülasyonla devre tasarımı, akım şeması geliştirme ve ekipman seçimi/boyutlandırması işlerini kapsayan Ar-Ge faaliyetleri konusunda hizmet vermektedir. Endüstriye verilen bu Ar-Ge destekleri yanında ekipman tasarımı ve cevher hazırlama devrelerinin modelleme/simülasyonu konularında Ar-Ge çalışmaları yürütmektedir.
+
 Konusunda uzman ekibiyle mevcut cevher zenginleştirme tesislerinde performans değerlendirme ve iyileştirmesine konusunda endüstriye destek vermektedir.
-</string>
+</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
